test_programs/compile_failure/noirc_frontend_tests_traits_errors_if_unconstrained_trait_definition_has_constrained_impl/src/main.nr

    pub trait Foo {
        unconstrained fn foo() -> Field;
    }

    impl Foo for Field {
        fn foo() -> Field {
            42
        }
    }
    